# Babel

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
Doc/: protocol.txt
client/: client.cpp
client/BabelClient/: BabelClient.cpp  BabelClient.hpp  call.cpp  call.hpp  user.cpp  user.hpp
client/Qt_interface/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
client/call/: Exception.cpp  Exception.hpp  StreamEncoder.cpp  StreamEncoder.hpp  StreamHandler.cpp  StreamHandler.hpp
client/tcp/: ClientSession.cpp  ClientSession.hpp  TCP_client.cpp  TCP_client.hpp
client/udp/: ReceiverUdp.cpp  ReceiverUdp.hpp  SenderUdp.cpp  SenderUdp.hpp
clientServer/: Packet.cpp  Packet.hpp
server/: server.cpp
server/BabelServer/: BabelServer.cpp  BabelServer.hpp  BabelUser.cpp  BabelUser.hpp
server/Network/: Network.cpp  Network.hpp  TCP_server.cpp  TCP_server.hpp  session.cpp  session.hpp
